# react1

./: README.md
images_photoshop/: bg.psd  bg_0000_Rounded Rectangle 2.psd  bg_0001_Rounded Rectangle 1.psd  bg_screen.psd  green_bar.psd  green_triangle.psd  phy_button.psd
react1/: App.js  index.js  package-lock.json  package.json  tuner.js
react1/android/: settings.gradle
react1/android/app/: BUCK  CMakeLists.txt  build.gradle
react1/android/app/src/main/: AndroidManifest.xml
react1/android/app/src/main/cpp/: android  mattmkissfft
react1/android/app/src/main/java/com/react1/: MainApplication.java  Tuner.java
react1/android/app/src/main/java/com/react1/tuner/: Tuner.java  TunerNativeBridge.java  TunerPackage.java
react1/ios/react1/: AppDelegate.m  Info.plist
react1/ios/react1.xcodeproj/: project.pbxproj
react1/ios/react1.xcodeproj/xcshareddata/xcschemes/: react1-tvOS.xcscheme  react1.xcscheme
react1/ios/react1Tests/: react1Tests.m
react1/src/android/: mattmkissfft_android.cpp
react1/src/mattmkissfft/: mattmkissfft.cpp  mattmkissfft.h
